feat: contact page
Squashed commit of the following:

commit 908a2794f55e4f65d12a775bb0ac5f50784a7953
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Fri Jul 10 00:13:17 2020 +0200

    chore: update CHANGELOG

commit 202fbf6295ef06803465e1b4d2919740f90c4c35
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Fri Jul 10 00:10:14 2020 +0200

    feat: don't open analyzer by default

commit 4831fa352f2cadef30a07d8e124c65c689d357e4
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Fri Jul 10 00:06:27 2020 +0200

    feat: add field requirement label

commit ee8fc1a51b7e915f0b156eeda6867be8fdf2a278
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Thu Jul 9 23:49:56 2020 +0200

    feat: add contact page to navigation

commit bac6f2992d0f9c0dfdd9fea42efa87ed75f936cb
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Thu Jul 9 23:43:12 2020 +0200

    feat: add contact request status indicator

commit 91a9b5065bbdd6591c02ef2aef67666ee294e0ca
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Thu Jul 9 23:16:23 2020 +0200

    feat: add contact form

commit 53c33a783f046cc037fb1a323e03a811c0299439
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Thu Jul 9 22:54:01 2020 +0200

    fix: webpack-dev-server history api fallback

commit 26c76bb2f001236cc33ebfcf2f5f22f3627c510e
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Thu Jul 9 20:58:11 2020 +0200

    feat: add contact page

commit c1d32a99d346beb8ae0932719e3a5010e1b1f688
Author: Domagoj Štrekelj <domagojstrekelj@gmail.com>
Date:   Thu Jul 9 20:50:32 2020 +0200

    chore: ignore .vercel

--- a/src/components/CTAElement/CTAElement.style.scss
+++ b/src/components/CTAElement/CTAElement.style.scss
@@ -3,10 +3,26 @@
 
 .cta-element {
     text-decoration: none;
+    border: none;
+    background: none;
+    display: inline-block;
+    cursor: pointer;
+    transition: opacity 0.2s ease;
+
+    &[disabled] {
+        opacity: 0.5;
+
+        .cta-element__icon {
+            animation-play-state: paused;
+        }
+    }
 }
+
 .cta-element__label {
+    display: inline-block;
     text-decoration: underline;
 }
+
 .cta-element__icon {
     display: inline-block;
     margin-right: 0.5em;
@@ -17,6 +33,7 @@
     from {
         transform: translateX(0);
     }
+
     to {
         transform: translateX(20%);
     }
